--- a/Phase1.tex
+++ b/Phase1.tex
@@ -164,7 +164,7 @@
 \end{itemize}
 \end{itemize}
 
-\section{بررسی و جمع بندی ارزیابیها، نقدها و پیشنهادات دانشجویان}
+\section{بررسی و جمع بندی ارزیابی‌ها، نقدها و پیشنهادات دانشجویان}
 
 \subsection{نقاط قوت مدل کسب و کار}
 \begin{itemize}
@@ -289,12 +289,12 @@
 \item 
 موارد قوت
 
-این جلسات با حضور افراد مختلف است که به صورت هفتگی است. افراد مختلف حضور پیدا میکندد و الهام بخش یکدیگر هستند و به هم انرژی میدهند. جو صمیمی که به وجود می آید بسیار مهم است و همچنین اینکه آنجا افراد با یکدیگر دوست میشوند و به واسطه دوستی ترک اعتیاد راحت تر است.
+این جلسات با حضور افراد مختلف است که به صورت هفتگی است. افراد در این جلسات حضور پیدا می‌کنند و الهام بخش یکدیگر می‌شوند و به هم انرژی می‌د‌هند. جو صمیمی که به وجود می‌آید بسیار مهم است و همچنین اینکه آنجا افراد با یکدیگر دوست می‌شوند و به واسطه دوستی ترک اعتیاد راحت‌تر است.
 
 \item
 موارد ضعف
 
-به واسطه حضوری بودن همه افراد از هر جای کشور قاعدتا نمیتوانند بیایند و ممکن است محدودیت فیزیکی نیز داشته باشند. مورد دیگر نیز بعضی از افراد که نمیخواند هویت شان فاش شود نمیتوانند در این جلسات حضور پیدا کنند چراکه افرادی که می آیند مشخص است و نمیشود به صورت ناشناس در این جلسات شرکت کرد.
+به واسطه حضوری بودن، همه افراد از هر جای کشور قاعدتا نمیتوانند بیایند و ممکن است محدودیت فیزیکی نیز داشته باشند. مورد دیگر نیز بعضی از افراد که نمی‌خواهند هویت شان فاش شود نمیتوانند در این جلسات حضور پیدا کنند؛ چراکه افرادی که می‌آیند مشخص است که چه کسانی‌ هستند و نمیشود به صورت ناشناس در این جلسات شرکت کرد.
 \end{itemize}
 
 
@@ -323,7 +323,7 @@
 \item 
 نقاط ضعف
 
-از جمله نقاط ضعفی که میشود اشاره کردن این است که این کمپ خصوصی است و عامه مردم نمیتوانند از آن استفاده کنند و همچنین با توجه به شرایط آن هزینه آن نیز گزاف خواهد بود و همه این ها در کنار هم باعث میشود که تنها افراد خاصی بتوانند از خدمات این کمپ استفاده کنند. مورد بعد حضوری بودن ان است. یعنی صرفا افرادی که برای آن شهر و منطقه هستند میتوانند استفاده کنند ازین شرایط و معتادان شهر های دیگر قابلیت استفاده از ان را ندارند.
+از جمله نقاط ضعفی که می‌شود اشاره کرد این است که این کمپ خصوصی است و عامه مردم نمیتوانند از آن استفاده کنند و همچنین با توجه به شرایط آن، هزینه آن نیز گزاف خواهد بود و همه این‌ها در کنار هم باعث می‌شود که تنها افراد خاصی بتوانند از خدمات این کمپ استفاده کنند. مورد بعد حضوری بودن آن است. یعنی صرفا افرادی که برای آن شهر و منطقه هستند میتوانند از این شرایط استفاده کنند و معتادان شهر های دیگر قابلیت استفاده از آن را ندارند.
 \end{itemize}
 
 
@@ -1481,12 +1481,136 @@
 \end{itemize}
 
 \section{بوم ارزش پیشنهادی}
-این بوم در تصویر فلان آورده شده است.
+این بوم‌ها در تصاویر 
+\ref{fig:value-proposed}
+و
+\ref{fig:value-proposed2}
+ آورده شده است.
+
+\subsection{توضیحات}
+\begin{enumerate}
+\item \lr{Customer Jobs}
+\begin{itemize}
+\item 
+آگاهی بخشی :کسب اطالعات درباره مضرات اعتیاد و راههای جلوگیری از آن.
+\item 
+مدیریت استرس و فشار روانی :یافتن ابزارها و روشهای مقابله با استرس و فشار گروه همساالن.
+
+\item 
+ارتباط و پشتیبانی :دسترسی به گروههای حمایتی، مشاوران و افرادی که تجربه موفق در پیشگیری یا ترک اعتیاد دارند.
+
+\item 
+یافتن سرگرمی و فعالیت های مثبت :استفاده از ابزارهایی برای تقویت مهارتها و سرگرمیهای سالم بهجای رفتارهای پرخطر.
+
+\item 
+خودآگاهی و تصمیم گیری بهتر :یادگیری مهارتهای زندگی برای مقابله با بحران های نوجوانی.
+\end{itemize}
+
+\item \lr{Customer Pains}
+
+\begin{itemize}
+\item 
+نبود تفریح یا گران بودن آن
+
+جوانان ممکن است در معرض انتخابهای غلط قرار بگیرند به دلیل عدم دسترسی به تفریحات سالم و ارزان.
+
+\item 
+نبود آموزش های مناسب
+
+بسیاری از جوانان ممکن است اطالعات کاف ی در مورد خطرات اعتیاد نداشته باشند. در نتیجه نیاز به آموزشهای صحیح و کاربردی دارند.
+
+\item 
+فشارهای اجتماعی و تمایل به تعلق به گروههای نادرست
+
+بسیاری از جوانان به دلیل فشار همساالن ممکن است به سمت رفتارهای پرخطر مانند مصرف مواد پ یش بروند.
+\end{itemize}
+
+\item \lr{Customer Gains}
+\begin{itemize}
+\item 
+رشد شخصیت و اعتماد به نفس
+
+جوانان از طریق آموزش های روانشناختی و مشاوره م یتوانند اعتماد به نفس بیشتری پیدا کنند و شخصیت خود را تقویت کنند.
+
+\item 
+دریافت آموزشهای مناسب و افزایش آگاهی برای جلوگیری از مصرف مواد
+
+دسترسی به آموزشها و منابع مفید میتواند به جوانان کمک کند تا تصمیمات آگاهانه‌تری بگیرند و از اعتیاد دور بمانند.
+
+\item 
+حضور در یک جامعه حمایت‌کننده
+
+اپلیکیشن میتواند فضا یی ایجاد کند که جوانان در آن از حمایت‌های اجتماعی و مشاورهای بهره‌مند شوند و احساس کنند که تنها نیستند.
+\end{itemize}
+
+\item \lr{Product and Services}
+\begin{itemize}
+\item 
+ایجاد سیستم تشویقی و یادآوری
+
+سیستم های پاداش و ی ادآوریهای مثبت به کاربران کمک می‌کند تا رفتارهای سالم را انتخاب کنند.
+
+\item 
+ارائه آمو‍زش‌های مفید و کارآمد
+
+اپلیکیشن می‌تواند آموزش هایی در زمینه مقابله با فشارهای اجتماعی، استرس، و تصمیم‌گیری صحیح ارائه دهد.
+
+\item 
+ایجاد فضای تعامل و ارتباط با گروه‌های مشابه: امکان تشکیل گروههای حمایتی و اجتماعی آنلاین برای کاربران فراهم می‌شود تا از تجربیات یکدیگر بهره‌مند شوند.
+\end{itemize}
+
+\item \lr{Pain Relievers}
+\begin{itemize}
+\item 
+ایجاد سرگرمی و تفریح ارزان
+
+با فراهم کردن بازی های آموزشی رایگان و فعالیت های تفریحی ارزان، جوانان میتوانند سرگرمیهای سالم و مفید پیدا کنند که جایگزین رفتارهای پرخطر مانند مصرف مواد شود.
+
+\item 
+ایجاد تعلق به یک گروه
+
+از طریق گروه های اجتماعی آنالین و گروه های حمایتی، جوانان میتوانند احساس تعلق به یک جامعه مثبت و سالم داشته باشند که به آنها در پیشگیری از اعتیاد کمک میکند.
+
+\item 
+ارائه آموزش های مناسب و کارآمد
+
+با ارائه دوره های آموزشی و ویدیوهای آگاهی بخش، جوانان میتوانند از خطرات اعتیاد آگاه شوند و مهارتهای الزم برای مقابله با فشارهای اجتماعی و تصمیمات غلط را بیاموزند.
+
+\item 
+ایجاد سیستم تشویقی و یادآور
+
+با سیستم پاداش‌دهی و یادآوری های انگیزشی، جوانان به ادامه مسیر خود تشویق می‌شوند و در مواقع بحرانی از بازگشت به رفتارهای پرخطر جلوگیری میکنند.
+\end{itemize}
+
+\item  \lr{Gain Creators}
+
+\begin{itemize}
+\item 
+ایجاد ارتباط اجتماعی سالم و مفید
+
+جوانان نیاز دارند که ارتباطات سالم و معناداری با همساالن و بزرگترها برقرار کنند. اپلیکیشن میتواند فضایی فراهم کند که ارتباطات مثبت را تقویت کند.
+
+\item 
+دریافت حمایت های مجازی از طریق بازی و حس تعلق :بازی های تعاملی و آموزشی میتوانند به جوانان کمک کنند تا احساس تعلق داشته باشند و در عین حال از فشارهای اجتماعی دور بمانند.
+
+\item
+ایجاد فضای تعامل با محیط امن
+
+ایجاد یک محیط آنالین که از نظر روانی و اجتماعی ایمن باشد، به جوانان کمک میکند تا از مشکلات اجتماعی و فردی خود فرار کنند و خود را بهتر بشناسند.
+\end{itemize}
+\end{enumerate}
 
 \section{\lr{MVP}}
 لندینگ پیج کسب و کار ما در تصویر 
-\ref{fig:langing-page}
+\ref{fig:landing-page}
 به تصویر کشیده شده است.
+
+همچنین می‌توانید لندینگ پیج را در دامنه‌های 
+\begin{itemize}
+\item \url{https://soberio.landin.ir/landing} و
+\item \url{https://soberio1.landin.ir/landing}
+\end{itemize}
+مشاهده کنید (علت اینکه دو لینک است اینست که پلن رایگان وبسایت فقط ۳ کامپوننت را ساپورت می‌کرد و برای استفاده بیشتر مجبور شدیم از دو اکانت استفاده کنیم.)
 
 \begin{figure}[b]
 \begin{center}
@@ -1496,6 +1620,22 @@
 \label{fig:lean-canvas}
 \end{figure}
 
+
+\begin{figure}[b]
+\begin{center}
+\includegraphics[scale=0.7, angle=90]{images/canvas2}
+\end{center}
+\caption{بوم ارزش پیشنهادی}
+\label{fig:value-proposed}
+\end{figure}
+
+\begin{figure}[b]
+\begin{center}
+\includegraphics[scale=0.5]{images/canvas3}
+\end{center}
+\caption{بوم ارزش پیشنهادی}
+\label{fig:value-proposed2}
+\end{figure}
 
 \begin{figure}[b]
 \begin{center}
