--- a/Phase2/Phase2.tex
+++ b/Phase2/Phase2.tex
@@ -3,7 +3,7 @@
 \usepackage[paper=a4paper, top=2cm, bottom=3cm, right=2.6cm, left=2.6cm]{geometry}
 
 \usepackage{xcolor}
-% URLs and hyperlinks ------------------------------
+% URLs and hyperlinks 
 \usepackage{hyperref}
 \hypersetup{
     colorlinks=true,
@@ -12,7 +12,7 @@
     urlcolor=blue,
 }
 \usepackage{xurl}
-%---------------------------------------------------
+%
 
 \usepackage{amsmath, mathtools}
 \usepackage{footnotehyper}
@@ -184,6 +184,269 @@
 اگر این مسائل به درستی مدیریت شوند می‌توان گفت که در مدت معقولی کسب و کار به نقطه‌س سر به سر و سپس رشد می‌رسد.
 
 \section{اطلاعات کسب و کار}
+
+\subsection{مدل کسب و کار}
+مدل کسب و کار در تصویر
+\ref{fig:canvas}
+آورده شده است.
+
+\begin{figure}[b]
+\begin{center}
+\includegraphics[scale=0.74, angle=90]{../images/canvas1}
+\end{center}
+\caption{مدل کسب و کار}
+\label{fig:canvas}
+\end{figure}
+
+\subsection{چشم‌انداز، ماموریت‌ها و ارزش‌ها}
+\subsubsection{چشم‌انداز‌ها}
+ایجاد جهانی که در آن اعتیاد به مواد مخدر و الکل دیگر تهدیدی برای سلامت و کیفیت زندگی افراد نباشد و افراد جامعه به ابزارها، دانش و حمایت لازم برای پیشگیری و مقابله با این چالش دسترسی داشته باشند. هدف اصلی، ساختن جامعه‌ای است که در آن آگاهی، سلامت روانی و جسمی، و روابط اجتماعی پایدار و مثبت جایگزین اعتیاد شوند. این چشم‌انداز بر تغییر فرهنگ و ایجاد یک محیط امن و حمایتگر تأکید دارد که به رشد و پویایی فردی و اجتماعی کمک کند.
+
+\subsubsection{ماموریت‌‌ها}
+\begin{enumerate}
+\item 
+آگاهی‌بخشی عمومی
+
+توسعه محتوای آموزشی متناسب با فرهنگ جامعه برای افزایش دانش مردم درباره عوارض و پیامدهای اعتیاد و اهمیت پیشگیری.  
+
+\item 
+تسهیل دسترسی به خدمات حمایتی
+
+ایجاد بستری دیجیتال که ارتباط میان افراد در معرض خطر و مشاوران حرفه‌ای را تسهیل کرده و خدمات پیشگیرانه و درمانی را در دسترس همگان قرار دهد.  
+\item 
+ارتقای سلامت اجتماعی
+
+همکاری با نهادهای مرتبط، کلینیک‌های تخصصی و سازمان‌های غیردولتی برای ایجاد هم‌افزایی و پیشبرد اهداف کاهش اعتیاد.  
+
+\item 
+نوآوری در راه‌حل‌ها
+
+استفاده از فناوری‌های پیشرفته، مانند هوش مصنوعی و داده‌های کلان، برای شناسایی الگوهای رفتاری و ارائه راهکارهای شخصی‌سازی‌شده به کاربران.
+\end{enumerate}
+
+\subsubsection{ارزش‌ها}
+\begin{enumerate}
+\item 
+صداقت و شفافیت
+
+ارائه اطلاعات و خدمات با نهایت دقت و صحت، به‌گونه‌ای که اعتماد کاربران جلب شده و آنان به دریافت کمک تمایل پیدا کنند.  
+
+\item 
+حفظ کرامت انسانی
+
+احترام به تمام افراد بدون توجه به پیشینه یا مشکلات آنان و ارائه راهکارهایی که حریم خصوصی و ارزش‌های انسانی را حفظ کنند.  
+
+\item 
+همکاری و مشارکت
+
+ایجاد هم‌افزایی میان نهادها، خانواده‌ها و جوامع برای مقابله با اعتیاد و تقویت پیوندهای اجتماعی.  
+
+\item 
+تعهد اجتماعی
+
+تلاش مداوم برای کاهش آسیب‌های ناشی از اعتیاد و حمایت از نسل‌های آینده برای رسیدن به جامعه‌ای سالم‌تر و آگاه‌تر.  
+
+\item 
+نوآوری و خلاقیت
+
+بهره‌گیری از روش‌های جدید و ابزارهای دیجیتال برای ایجاد تأثیر بیشتر در آگاهی‌بخشی و پیشگیری.
+\end{enumerate}
+\subsection{برنامه بازاریابی}
+\begin{enumerate}
+\item 
+تبلیغات در فضای مجازی 
+ 
+\textbf{هدف}:
+افزایش آگاهی عمومی و جذب کاربران به پلتفرم.  
+\begin{itemize}
+\item 
+کمپین‌های شبکه‌های اجتماعی
+\begin{itemize}
+\item 
+طراحی محتواهای جذاب و آموزشی شامل ویدیوهای کوتاه، اینفوگرافیک‌ها، و داستان‌های الهام‌بخش از افرادی که اعتیاد را ترک کرده‌اند.  
+
+\item 
+استفاده از پلتفرم‌هایی مانند اینستاگرام، تلگرام، توییتر و لینکدین برای به اشتراک‌گذاری محتوا.  
+
+\item 
+اجرای کمپین‌های تبلیغاتی هدفمند با استفاده از ابزارهای تبلیغاتی (\lr{Google Ads} و تبلیغات در شبکه‌های اجتماعی).  
+
+\item 
+دعوت از افراد تأثیرگذار (اینفلوئنسرها) برای حمایت از کمپین‌ها و تبلیغ ارزش‌های پلتفرم.  
+\end{itemize}
+
+\item 
+استفاده از تبلیغات هدفمند
+\begin{itemize}
+\item 
+تبلیغات مبتنی بر علاقه‌مندی کاربران در گروه‌های مختلف (مانند خانواده‌ها، جوانان و نوجوانان).  
+
+\item 
+ارائه کدهای تخفیف یا دسترسی رایگان به خدمات ویژه برای کاربران جدید.  
+\end{itemize}
+\item 
+ایجاد محتوای ویروسی
+\begin{itemize}
+\item 
+چالش‌های اجتماعی با هشتگ‌های مخصوص (مثلاً 
+\textcolor{blue}{\#زندگی\_بدون\_اعتیاد}).  
+\item 
+داستان‌های کاربران موفق و محتوای انگیزشی برای جلب مشارکت بیشتر.  
+\end{itemize}
+\end{itemize}
+
+\item 
+تبلیغات شهری و مدارس 
+ 
+\textbf{هدف}:
+افزایش آگاهی عمومی به‌ویژه در میان نوجوانان و خانواده‌ها.  
+
+\begin{itemize}
+\item 
+برگزاری کمپین‌های شهری
+\begin{itemize}
+\item 
+نصب بیلبوردها و پوسترهای آموزشی در مناطق پرتردد شهری با پیام‌های انگیزشی و آموزشی.  
+\item 
+استفاده از ایستگاه‌های مترو، اتوبوس و پایانه‌های مسافربری برای تبلیغات کوتاه و هدفمند.  
+\end{itemize}
+\item 
+فعالیت در مدارس
+\begin{itemize}
+\item 
+برگزاری کارگاه‌ها و سخنرانی‌های آموزشی برای دانش‌آموزان، معلمان و والدین.  
+\item 
+توزیع بروشورها، کتابچه‌های آموزشی و پوسترهای جذاب در مدارس.  
+\item 
+معرفی اپلیکیشن یا خدمات از طریق مشاوران مدارس.  
+\item 
+راه‌اندازی مسابقات یا برنامه‌های مشارکتی در مدارس با موضوع مبارزه با اعتیاد.  
+\end{itemize}
+\item 
+توزیع محتوای آگاهی‌بخش
+\begin{itemize}
+\item 
+چاپ استیکرها و کارت‌های آموزشی با پیام‌های کوتاه و الهام‌بخش برای توزیع در مدارس و مکان‌های عمومی.  
+\end{itemize}
+\end{itemize}
+
+\item 
+استفاده از گیمیفیکیشن \lr{(Gamification)} 
+ 
+\textbf{هدف}:
+افزایش تعامل و مشارکت کاربران با استفاده از مکانیزم‌های بازی‌گونه.  
+\begin{itemize}
+\item 
+سیستم پاداش
+\begin{itemize}
+\item 
+ارائه امتیاز به کاربران برای تکمیل دوره‌های آموزشی در اپلیکیشن.  
+\item 
+ایجاد جدول امتیازات \lr{(Leaderboard)} برای تشویق رقابت سالم بین کاربران.  
+\item 
+جوایز مانند اشتراک رایگان، تخفیف خدمات یا هدایای نمادین برای کاربران فعال.  
+\end{itemize}
+
+\item 
+بازی‌های آموزشی
+\begin{itemize}
+\item 
+طراحی بازی‌هایی که به صورت غیرمستقیم مضرات اعتیاد را آموزش دهند (مانند شبیه‌سازی‌های زندگی سالم).  
+\item 
+استفاده از سناریوهایی که در آن‌ها کاربر تصمیم‌گیری‌های مهمی برای مقابله با چالش‌های مربوط به اعتیاد انجام می‌دهد.  
+\end{itemize}
+
+\item 
+چالش‌های گروهی
+\begin{itemize}
+\item 
+دعوت از کاربران به شرکت در چالش‌های گروهی مانند "30 روز بدون مواد مخدر`` و ارائه جوایز به گروه‌های برتر.  
+\item 
+طراحی فعالیت‌های اجتماعی که کاربران بتوانند امتیاز جمع کنند و اهداف مشخصی را با هم به پایان برسانند.  
+\end{itemize}
+
+\item 
+تشویق معرفی به دیگران
+\begin{itemize}
+\item 
+ارائه امتیاز به کاربران برای معرفی دوستان خود به پلتفرم.  
+\item 
+فعال‌سازی برنامه‌های همکاری کاربران برای تبلیغ پلتفرم در محیط‌های آموزشی و اجتماعی.  
+\end{itemize}
+\end{itemize}
+
+\item 
+برگزاری دورهمی‌های اجتماعی  
+
+\textbf{هدف}:
+تقویت ارتباطات اجتماعی و افزایش آگاهی از طریق فعالیت‌های گروهی.  
+
+\begin{itemize}
+\item 
+دورهمی‌های آموزشی
+\begin{itemize}
+\item 
+برگزاری رویدادهای حضوری در پارک‌ها، کتابخانه‌ها، یا مراکز فرهنگی با موضوعات مرتبط با آگاهی‌بخشی درباره اعتیاد.  
+\item 
+دعوت از متخصصان، روانشناسان و افراد موفق برای سخنرانی و تبادل تجربه.  
+\item 
+فراهم کردن فضای مشارکت جمعی برای بحث و گفت‌وگو درباره راهکارهای مقابله با اعتیاد.  
+\end{itemize}
+
+\item 
+برنامه‌های تفریحی و فرهنگی
+\begin{itemize}
+\item 
+سازمان‌دهی مسابقات ورزشی، نمایش فیلم‌های آموزشی و برنامه‌های هنری با پیام‌های مرتبط با زندگی سالم.  
+\item 
+ترکیب فعالیت‌های سرگرم‌کننده با آموزش غیرمستقیم درباره اعتیاد.  
+\end{itemize}
+
+\item 
+جلسات حمایتی
+\begin{itemize}
+\item 
+ایجاد گروه‌های حمایتی برای افرادی که به تازگی ترک کرده‌اند یا خانواده‌های آنان.  
+\item 
+استفاده از فضای دورهمی برای تقویت روحیه و ایجاد انگیزه در میان اعضای جامعه هدف.  
+\end{itemize}
+\end{itemize}
+
+\item 
+برنامه ریفرال \lr{(Referral Program)}  
+
+\textbf{هدف}:
+افزایش تعداد کاربران با استفاده از مشارکت کاربران فعلی.  
+\begin{itemize}
+\item 
+سیستم پاداش برای معرفی دوستان
+\begin{itemize}
+\item 
+ارائه امتیاز یا جوایز ویژه (مانند دسترسی به محتوای اختصاصی یا تخفیف در خدمات) برای کاربرانی که دوستان خود را به پلتفرم دعوت می‌کنند.  
+\item 
+طراحی کدهای ریفرال اختصاصی برای هر کاربر و رهگیری تعداد افرادی که از طریق آن کد ثبت‌نام کرده‌اند.  
+\end{itemize}
+
+\item 
+تشویق کاربران به گسترش پیام آگاهی‌بخشی
+\begin{itemize}
+\item 
+ارائه امتیاز برای اشتراک‌گذاری محتواهای پلتفرم در شبکه‌های اجتماعی.  
+\item 
+راه‌اندازی کمپین‌هایی با محوریت ریفرال، مانند "هر کاربری که 5 نفر را دعوت کند، یک جایزه ویژه دریافت می‌کند.``
+\end{itemize}
+
+\item 
+برنامه‌های گروهی
+\begin{itemize}
+\item 
+ایجاد تیم‌های دوستانه در پلتفرم و ارائه چالش‌های گروهی که افراد بیشتری را به مشارکت دعوت کند.
+\item 
+ارائه جوایز گروهی برای تیم‌هایی که تعداد بیشتری از اعضا را به جامعه اضافه کنند.
+\end{itemize}
+\end{itemize}
+\end{enumerate}
+
 \section{تحلیل‌های مالی}
 \subsection{مقدمه}
 پروژه اپلیکیشن مقابله با اعتیاد و پیشگیری از مصرف مواد مخدر و الکل، به عنوان یک ابزار نوین و فناورانه برای حل یکی از معضلات اجتماعی، نیازمند یک رویکرد مالی دقیق و هدفمند است.
